# libRaptorQ

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  README  README.md  cppcheck.suppress  cppcheck_howto  scan-build
cmake/: FindLZ4.cmake  FindRQ_LZ4.cmake  Findclib_clang.cmake  Findclib_gcc.cmake  Findeigen.cmake  Findgit.cmake  Findstd_clang.cmake  Findstd_gcc.cmake  UseLATEX.cmake  compiler_flags  compiler_flags.cmake  guess_architecture.cmake
doc/: CMakeLists.txt  GNU_FDL.tex  libRaptorQ-RAW.tex  libRaptorQ-RFC6330.tex  libRaptorQ.tex
examples/: example_cpp_raw.cpp
src/: Bitmask.cpp  De_Interleaver.hpp  Decoder.hpp  Encoder.hpp  Graph.cpp  Graph.hpp  Interleaver.hpp  Operation.cpp  Operation.hpp  Parameters.cpp  Parameters.hpp  Precode_Matrix.cpp  Precode_Matrix.hpp  Precode_Matrix_Init.hpp  Precode_Matrix_Instantiation.cpp  Precode_Matrix_Solver.hpp  Precode_Matrix_solver.cpp  Rand.cpp  Rand.hpp  RaptorQ.cpp  RaptorQ.hpp  Thread_Pool.cpp  Thread_Pool.hpp  cRaptorQ.cpp  cRaptorQ.h  common.hpp  degree.hpp  deterministic.cpp  endianness.hpp  multiplication.hpp  table2.hpp
src/RaptorQ/: RFC.h  RFC.hpp  RFC6330.h  RFC6330.hpp  RFC6330_v1.hpp  RFC6330_v1_hdr.hpp  RaptorQ.h  RaptorQ_v1.hpp  RaptorQ_v1_hdr.hpp
src/RaptorQ/v1/: .Interleaver.hpp.swp  API_Iterators.hpp  API_Wrapper.h  API_Wrapper.hpp  API_Wrapper_C.cpp  API_Wrapper_Raw.hpp  Bitmask.cpp  Bitmask.hpp  De_Interleaver.hpp  Decoder.hpp  DenseOctetMatrix.hpp  DenseOctetMatrixBlock.hpp  Encoder.hpp  Graph.cpp  Graph.hpp  Interleaver.hpp  Octet.hpp  Operation.cpp  Operation.hpp  Parameters.cpp  Parameters.hpp  Precode_Matrix.hpp  Precode_Matrix_Init.hpp  Precode_Matrix_Instantiation.cpp  Precode_Matrix_Solver.hpp  RFC.cpp  RFC.hpp  RFC_API.h  RFC_API.hpp  RFC_API_C.cpp  RFC_Iterators.hpp  Rand.cpp  Rand.hpp  RaptorQ.hpp  RaptorQ_Iterators.hpp  Tag_Ptr.hpp  Thread_Pool.cpp  Thread_Pool.hpp  block_sizes.hpp  caches.cpp  (+7 more)
src/RaptorQ/v1/Shared_Computation/: Decaying_LF.cpp  Decaying_LF.hpp  Flock_Guard.cpp  Flock_Guard.hpp  LZ4_Wrapper.hpp  Shared_Computation_Linux.cpp  Shared_Computation_Linux.hpp
src/RaptorQ/v1/util/: Bitmask.hpp  CPU_Info.hpp  Graph.hpp  Matrix.hpp  Matrix_AVX2.hpp  Matrix_None.hpp  Matrix_SSSE3.hpp  div.hpp  endianess.hpp
src/RaptorQ/v1/wrapper/: CPP_RAW_API.hpp  CPP_RAW_API_void.cpp  CPP_RAW_API_void.hpp  CPP_RFC_API.hpp  CPP_RFC_API_Iterators.hpp  CPP_RFC_API_void.cpp  CPP_RFC_API_void.hpp  CPP_caches.cpp  C_RAW_API.cpp  C_RAW_API.h  C_RFC_API.cpp  C_RFC_API.h  C_common.h
src/Shared_Computation/: Decaying_LF.cpp  Decaying_LF.hpp  LZ4_Wrapper.hpp
src/cli/: RaptorQ.cpp
test/: rfc_test.cpp  test.cpp  test_c.c  test_cpp.cpp  test_cpp_raw.cpp  test_cpp_rfc.cpp
unit_test/: Makefile  tests-dense-matrix.cpp  tests-eigen-compatibility.cpp  tests-gf-calc.cpp  tests-main.cpp  tests-ops-store.cpp  tests-util-matrix.cpp
unit_test/catch2/: catch.hpp
